<resources>
    <string name="app_name">AppChooser</string>
    <string name="quote1">he only person you are destined to become is the person you decide to be.</string>
    <string name="quote2">If you are working on something that you really care about, you don\'t have to be pushed.</string>
    <string name="quote3">You only live once, but if you do it right, once is enough.</string>
    <string name="quote4">I\'m a great believer in luck, and I find the harder I work, the more I have of it.</string>
    <string name="quote5">The only approval you need is your own.</string>
    <string name="quote6">Never regret anything that made you smile.</string>
</resources>