<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/quote1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/quote2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox

        android:id="@+id/checkBox3"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/quote3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/quote4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/quote5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/quote6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <Button
        android:id="@+id/button"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="540dp"
        android:text="Send Quotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/per"
        android:layout_width="131dp"
        android:layout_height="62dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="628dp"
        android:text="Next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>